--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "roblox-ai-proxy",
+  "name": "roblox-gemini-proxy",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.1"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.0",
+    "node-fetch": "^3.3.1",
+    "express": "^4.18.2"
   }
 }
